# inventory

./: .bazelrc  .hie-bios  BUILD.bazel  WORKSPACE  flake.nix  hie.yaml  pkgs.nix  shell.nix  stackage_snapshot.json  validate-pns
bazel/: csv.patch  rules_haskell_core_exceptions.patch
data/: inventory.md  part-numbers.md
mgmt/: .gitignore  BUILD.bazel  defaults.yaml  deps.bzl  package.yaml
mgmt/src/: PartNumbers.hs
mgmt/src/Inventory/: Types.hs
mgmt/src/Scripts/: ValidatePNs.hs
nih/: BUILD.bazel  deps.bzl
nih/ixset-typed/: ixset-typed.cabal
nih/ixset-typed/src/Data/IxSet/: Typed.hs
