load("@rules_haskell//haskell:defs.bzl",
    "haskell_library",
    "haskell_toolchain_library"
)

load(":deps.bzl", "stackage_deps")

haskell_library(
    name = "inv-mgmt",
    srcs = glob(["src/**/*.hs"]),
    src_strip_prefix = "src",
    visibility = ["//visibility:public"],
    deps = [ "@stackage//:{}".format(d) for d in stackage_deps ] +
           [ "//nih:ixset-typed" ],
)
